# vault-terraform-ansible

./: .gitignore  README.md  pyproject.toml  requirements.txt
ansible/: site.yml
ansible/group_vars/: vault.yml
ansible/inventory/: vault.aws_ec2.yml
ansible/tasks/: apt.yml  vault.yml
ansible/templates/etc/systemd/system/: vault.service.j2
ansible/templates/etc/vault.d/: vault.hcl.j2
terraform/: .terraform.lock.hcl  ec2.tf  iam.tf  kms.tf  locals.tf  outputs.tf  s3.tf  variables.tf  versions.tf
