[tool.poetry]
name = "vault-ansible-terraform"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <afoley@getsporttrade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.6.1"
hvac = "^2.0.0"
ansible-modules-hashivault = "^5.1.2"
botocore = "^1.31.84"
boto3 = "^1.28.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
